text align bug fixed in Media Component

--- a/src/Components/media.css
+++ b/src/Components/media.css
@@ -13,6 +13,7 @@ h2 {
   font-size: 27px;
   font-weight: 250;
   line-height: 37.8px;
+  text-align: center;
 }
 
 .in-news {
